--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/jsdom": "^20.0.1",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.2",
+    "jsdom": "^21.0.0",
+    "tabletojson": "^2.0.7"
   }
 }
